[package]
name = "basicvideostreamer"
version = "1.0.0"
edition = "2021"
authors = ["JhnW <jhnw.global@gmail.com>"]
license = "MIT"
description = "Primitive image streaming HTTP server."
repository = "https://github.com/jhnw/basicvideostreamer"
documentation = "https://docs.rs/basicvideostreamer"
readme = "README.md"
keywords = ["http", "server", "streaming", "image"]
categories = ["network-programming", "web-programming::http-server"]

[dependencies]
httparse = "1.7.1"

[dev-dependencies]
image = "0.24.2"